--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ asgiref==3.7.2
 attrs==23.1.0
 colorama==0.4.6
 crispy-bootstrap4==2023.1
+decouple==0.0.7
+dj-database-url==2.1.0
 Django==5.0
 django-crispy-forms==2.1
 django-debug-toolbar==4.2.0
@@ -15,13 +17,16 @@ mccabe==0.7.0
 packaging==23.1
 pep8-naming==0.13.2
 pluggy==1.3.0
+psycopg2==2.9.9
 py==1.11.0
 pycodestyle==2.9.1
 pyflakes==2.5.0
 pytest==7.1.3
 pytest-xdist==3.3.1
+python-decouple==3.8
 python-dotenv==1.0.1
 sqlparse==0.4.4
 tomli==2.0.1
+typing_extensions==4.9.0
 tzdata==2023.3
-dj_database_url
+whitenoise==6.6.0
