--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ flake8==5.0.4
 flake8-annotations==2.9.1
 flake8-quotes==3.3.1
 flake8-variables-names==0.0.5
+gunicorn==21.2.0
 iniconfig==2.0.0
 mccabe==0.7.0
 packaging==23.1
